Ticket #3461: big gaps in square-root signs fixed
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@26830 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/resources/css/mathquill.css
+++ b/web/src/geogebra/resources/css/mathquill.css
@@ -120,7 +120,7 @@
   font-size: 87%;
 }
 .mathquill-rendered-math .font {
-  font: 1em "Times New Roman", Symbola, serif;
+  font: 1em Symbola, "Times New Roman", serif;
 }
 .mathquill-rendered-math .font * {
   font-family: inherit;
